Page about updating my resume

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -41,7 +41,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": ""
+   "source": [
+    "## Blog/Projects\n",
+    "\n",
+    "- 20240427 - [Resume](/20240427_update_resume)"
+   ]
   },
   {
    "cell_type": "markdown",
