Rework the pages to use .qmd instead of .ipynb - since most of them are notes anyway

--- a/nbs/extras/20240427-how-to-download-and-run-models-from-huggingface.qmd
+++ b/nbs/extras/20240427-how-to-download-and-run-models-from-huggingface.qmd
@@ -1,5 +1,8 @@
 # How to download & run GGUF models
 
+
+Instruction to download & run GGUF models from Hugging Face.
+
 **CREDIT to [PrunaAI](https://www.pruna.ai/) for providing the instruction.**
 
 Source: <https://huggingface.co/PrunaAI/Phi-3-mini-128k-instruct-GGUF-Imatrix-smashed/blob/main/README.md>
